# decimal-binary-converter

./: LICENSE  README.md  pyproject.toml
decimal_binary_converter/: __init__.py
src/decimal_binary_converter/: converter.py
src/decimal_binary_converter_USERNAME.egg-info/: PKG-INFO  SOURCES.txt
src/simple_example_package_of_decimal_binary_converter.egg-info/: PKG-INFO
tests/: test_converter.py
