[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "decimal_binary_converter"
version = "0.1.0"
authors = [{ name = "Name", email = "Email ID" }]
description = "long description here"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []